--- a/moai/conf/examples/MNIST/monitor.yaml
+++ b/moai/conf/examples/MNIST/monitor.yaml
@@ -1,52 +1,54 @@
 # @package _global_
 
 _moai_:
-  _collections_:
-    _monitors_:
-      save_image_batch:
-        image2d:
-          modality: [color] # or depth
-          colormap: [none] # bone, etc.
-          transform: [none] # minmax, etc.
-          mode: [overwrite] # [all, overwrite]
-          key: [color]
-          path: .
-          extension: [png] # [png, exr, jpg]
-    _metrics_:
-      test_class_acc:
-        multiclass_acc:
-          # gt: [label]
-          # pred: [predicted_label]
-          target: [label]
-          preds: [predicted_label]
-          out: [accuracy]
-        multiclass_f1:
-          target: [label]
-          preds: [predicted_label]
-          out: [f1]
-      predict_class_acc:
-        multiclass_acc:
-          target: [predicted_label]
-          preds: [predicted_label]
-          out: [accuracy2]
-  _monitoring_:
-    _fit_:
-      _batch_:
-        train_encoder:
-          _frequency_: 1
-          _flows_: []
-    _val_:
-      _batch_:
-        train_encoder:
+  _definitions_:
+    _collections_:
+      _monitors_:
+        save_image_batch:
+          image2d:
+            modality: [color] # or depth
+            colormap: [none] # bone, etc.
+            transform: [none] # minmax, etc.
+            mode: [overwrite] # [all, overwrite]
+            key: [color]
+            path: .
+            extension: [png] # [png, exr, jpg]
+      _metrics_:
+        test_class_acc:
+          multiclass_acc:
+            # gt: [label]
+            # pred: [predicted_label]
+            target: [label]
+            preds: [predicted_label]
+            out: [accuracy]
+          multiclass_f1:
+            target: [label]
+            preds: [predicted_label]
+            out: [f1]
+        predict_class_acc:
+          multiclass_acc:
+            target: [predicted_label]
+            preds: [predicted_label]
+            out: [accuracy2]
+  _execution_:
+    _monitoring_:
+      _fit_:
+        _batch_:
+          train_encoder:
+            _frequency_: 1
+            _flows_: []
+      _val_:
+        _batch_:
+          train_encoder:
+            _metrics_:
+              - test_class_acc
+      _test_:
+        _batch_:
           _metrics_:
             - test_class_acc
-    _test_:
-      _batch_:
-        _metrics_:
-          - test_class_acc
-    _predict_:
-      _batch_:
-        _metrics_:
-          - predict_class_acc
-        _monitors_: # used for visualization & exporting
-          - save_image_batch
+      _predict_:
+        _batch_:
+          _metrics_:
+            - predict_class_acc
+          _monitors_: # used for visualization & exporting
+            - save_image_batch
