--- a/moai/conf/examples/MNIST/objective.yaml
+++ b/moai/conf/examples/MNIST/objective.yaml
@@ -1,14 +1,15 @@
 _moai_:
-  _collections_:
-    _objectives_:
-      train_encoder:
-        cross_entropy:
-          pred: [prediction]
-          gt: [label]
-          out: [train_loss]
-    _optimizers_:
-      train_encoder:
-        _type_: adam
-        _params_:
-          lr: 1.0e-3
-        _groups_: [encoder]
+  _definitions_:
+    _collections_:
+      _objectives_:
+        train_encoder:
+          cross_entropy:
+            pred: [prediction]
+            gt: [label]
+            out: [train_loss]
+      _optimizers_:
+        train_encoder:
+          _type_: adam
+          _params_:
+            lr: 1.0e-3
+          _groups_: [encoder]
