--- a/moai/conf/examples/smplifyx/flows.yaml
+++ b/moai/conf/examples/smplifyx/flows.yaml
@@ -1,58 +1,59 @@
 # @package _global_
 
 _moai_:
-  _flows_:
-    initialize_translation:
-      joints2d: [keypoints]
-      joints3d: [body.joints]
-      out: [init_trans]
-    preprocess:
-      embedding:
-        void: [color]
-        out: [embedding]
-      translation:
-        void: [color]
-        out: [translation]
-      betas:
-        void: [color]
-        out: [betas]
-      vposer1: # vposer2:
-        decode: [embedding]
-        out: [decoded]
-      smplx:
-        pose: [decoded.pose]
-        shape: [betas]
-        out: [body]
-    postprocess:
-      weak_perspective_camera:
-        points: 
-          - ${mi:"body.joints + translation"}
-        # translation: [translation]
-        image: [color]
-        out: [joints2d]
-      # index:
-      #   tensor: [joints2d, keypoints]
-      #   out: [torso_joints2d, torso_keypoints]
-      _mi_1: # alias:
-        expression: # tensor: 
-          - ${mi:"joints2d[:, ${torso_indices}, :]"}
-          - ${mi:"keypoints[:, ${torso_indices}, :]"}
-        out: [torso_joints2d, torso_keypoints]
-      binary:
-        tensor: [init_trans]
-        out: [z_mask]
-      # openpose_split:
-      #   joints: [joints2d, keypoints, confidence]
-      #   out: [split_joints2d, split_keypoints, split_confidence]
-      _mi_openpose_split: #     'coco25':               [25,    21 * 2,     51],
-        expression: 
-          - ${mi:"joints2d[:, 0:25, :]"}
-          - ${mi:"keypoints[:, 0:25, :]"}
-          - ${mi:"confidence[:, 0:25, :]"}
-        out: [split_joints2d_body, split_keypoints_body, split_confidence_body]
-      _mi_2: # alias:
-        expression: # tensor: 
-          - ${mi:"body.vertices + translation"}
-          # - ${mi:"joints2d[:, ${torso_indices}]"}
-          # - ${mi:"keypoints[:, ${torso_indices}]"}
-        out: [translated_vertices] # , torso_joints2d, torso_keypoints]
+  _definitions_:
+    _flows_:
+      initialize_translation:
+        joints2d: [keypoints]
+        joints3d: [body.joints]
+        out: [init_trans]
+      preprocess:
+        embedding:
+          void: [color]
+          out: [embedding]
+        translation:
+          void: [color]
+          out: [translation]
+        betas:
+          void: [color]
+          out: [betas]
+        vposer1: # vposer2:
+          decode: [embedding]
+          out: [decoded]
+        smplx:
+          pose: [decoded.pose]
+          shape: [betas]
+          out: [body]
+      postprocess:
+        weak_perspective_camera:
+          points: 
+            - ${mi:"body.joints + translation"}
+          # translation: [translation]
+          image: [color]
+          out: [joints2d]
+        # index:
+        #   tensor: [joints2d, keypoints]
+        #   out: [torso_joints2d, torso_keypoints]
+        _mi_1: # alias:
+          expression: # tensor: 
+            - ${mi:"joints2d[:, ${torso_indices}, :]"}
+            - ${mi:"keypoints[:, ${torso_indices}, :]"}
+          out: [torso_joints2d, torso_keypoints]
+        binary:
+          tensor: [init_trans]
+          out: [z_mask]
+        # openpose_split:
+        #   joints: [joints2d, keypoints, confidence]
+        #   out: [split_joints2d, split_keypoints, split_confidence]
+        _mi_openpose_split: #     'coco25':               [25,    21 * 2,     51],
+          expression: 
+            - ${mi:"joints2d[:, 0:25, :]"}
+            - ${mi:"keypoints[:, 0:25, :]"}
+            - ${mi:"confidence[:, 0:25, :]"}
+          out: [split_joints2d_body, split_keypoints_body, split_confidence_body]
+        _mi_2: # alias:
+          expression: # tensor: 
+            - ${mi:"body.vertices + translation"}
+            # - ${mi:"joints2d[:, ${torso_indices}]"}
+            # - ${mi:"keypoints[:, ${torso_indices}]"}
+          out: [translated_vertices] # , torso_joints2d, torso_keypoints]
