--- a/moai/conf/data/predict/loader/torch.yaml
+++ b/moai/conf/data/predict/loader/torch.yaml
@@ -1,8 +1,8 @@
 # @package data.predict.loader
 
 _target_: torch.utils.data.DataLoader
-batch_size: ${experiment.batch_size}
+batch_size: ${oc.select:experiment.batch_size,1}
 shuffle: false
-num_workers: ${experiment.workers}
+num_workers: ${oc.select:experiment.workers,0}
 pin_memory: false
 drop_last: false
