--- a/moai/conf/data/train/loader/ignore.yaml
+++ b/moai/conf/data/train/loader/ignore.yaml
@@ -1,9 +1,9 @@
 # @package data.train.loader
 
 _target_: moai.data.loader.ignore.Ignore
-batch_size: ${experiment.batch_size}
+batch_size: ${oc.select:experiment.batch_size,1}
 shuffle: true
-num_workers: ${experiment.workers}
+num_workers: ${oc.select:experiment.workers,0}
 pin_memory: true
 drop_last: false
 ignore_keys: ???
