fix: updated keywords _out_, _weight_ & _reduction_
! fix random black color

--- a/moai/conf/examples/MNIST/objective.yaml
+++ b/moai/conf/examples/MNIST/objective.yaml
@@ -6,7 +6,7 @@ _moai_:
           cross_entropy:
             pred: [prediction]
             gt: [label]
-            out: [train_loss]
+            _out_: [train_loss]
       _optimizers_:
         train_encoder:
           _type_: adam
