--- a/moai/conf/examples/MNIST/monitor.yaml
+++ b/moai/conf/examples/MNIST/monitor.yaml
@@ -20,16 +20,16 @@ _moai_:
             # pred: [predicted_label]
             target: [label]
             preds: [predicted_label]
-            out: [accuracy]
+            _out_: [accuracy]
           multiclass_f1:
             target: [label]
             preds: [predicted_label]
-            out: [f1]
+            _out_: [f1]
         predict_class_acc:
           multiclass_acc:
             target: [predicted_label]
             preds: [predicted_label]
-            out: [accuracy2]
+            _out_: [accuracy2]
   _execution_:
     _monitoring_:
       _fit_:
