--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,7 +9,17 @@ jobs:
       - uses: actions/checkout@v3
       - uses: psf/black@stable
         with:
-          options: "--check --verbose" # --diff
+          options: "--check --verbose --color" # --diff
           src: "."
           # jupyter: true
           version: "24.4.2"
+      - name: notification
+        uses: appleboy/discord-action@4c196125180125310ac20c72034757bb71020383
+        if: ${{ failure() }}
+        with:
+          webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID }}
+          webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
+          color: '#DAA520' # "#48f442"
+          avatar_url: 'https://black.readthedocs.io/en/stable/_static/logo2-readme.png'
+          username: "Black Formatter"
+          message: "The _${{ github.event_name }}_ @ `${{ github.ref_name }}#${{ github.sha }}` needs to be `black` formatted."
