--- a/moai/conf/model/modules/latent/basic.yaml
+++ b/moai/conf/model/modules/latent/basic.yaml
@@ -1,6 +1,6 @@
 # @package model.modules.latent_dist_predictor
 
-_target_: moai.modules.lightning.distribution.Basic
+_target_: moai.modules.distribution.basic.Basic
 mean_module:
   type: linear
   activation:
