--- a/moai/conf/model/modules/sampler/normal.yaml
+++ b/moai/conf/model/modules/sampler/normal.yaml
@@ -1,4 +1,4 @@
 # @package model.modules.sampler
 
-_target_: moai.modules.lightning.sampler.NormalPrior
+_target_: moai.modules.sampler.normal.NormalPrior
 mode: ???
