--- a/moai/conf/model/modules/encoder/mlp.yaml
+++ b/moai/conf/model/modules/encoder/mlp.yaml
@@ -1,6 +1,6 @@
 # @package model.modules.encoder
 
-_target_: moai.modules.MLP
+_target_: moai.modules.mlp.MLP
 
 configuration:
   in_features: ???
