--- a/moai/conf/model/monads/geometry/distance.yaml
+++ b/moai/conf/model/monads/geometry/distance.yaml
@@ -1,6 +1,6 @@
 # @package model.monads.distance
 
-_target_: moai.supervision.losses.regression.Distance
+_target_: moai.supervision.objectives.regression.distance.Distance
 mode: default
 order: 2.0
 dim: -1
