--- a/moai/conf/model/parameters/optimizers/adamw.yaml
+++ b/moai/conf/model/parameters/optimizers/adamw.yaml
@@ -1,6 +1,6 @@
 # @package model.parameters.optimizers.adamw
 
-_target_: moai.parameters.optimization.optimizers.AdamW
+_target_: moai.parameters.optimization.optimizers.adamw.AdamW
 lr: 0.001
 betas: [0.9, 0.999]
 eps: 1e-8
