--- a/moai/conf/engine/serve/handlers/input/azure/blob.yaml
+++ b/moai/conf/engine/serve/handlers/input/azure/blob.yaml
@@ -1,4 +1,4 @@
-# @package handlers.preprocess.azure._name_
+# @package handlers.preprocess.azure.blob
 
 _target_: moai.serve.handlers.azure.AzureBlobInputHandler
 connection_string: StorageAccessToken # ${env:AZURE_STORAGE_CONNECTION_STRING} # retrieve automatically from env
