--- a/moai/conf/engine/serve/handlers/output/azure/blob.yaml
+++ b/moai/conf/engine/serve/handlers/output/azure/blob.yaml
@@ -1,4 +1,4 @@
-# @package handlers.postprocess.azure._name_
+# @package handlers.postprocess.azure.blob
 
 _target_: moai.serve.handlers.azure.AzureBlobOutputHandler
 connection_string: StorageAccessToken # ${env:AZURE_STORAGE_CONNECTION_STRING} # retrieve automatically from env
