--- a/.github/workflows/publish_serve_220.yaml
+++ b/.github/workflows/publish_serve_220.yaml
@@ -1,4 +1,4 @@
-name: Build and publish torchserve
+name: Build and publish torchserve 2.2.0
 
 on:
   workflow_dispatch:
@@ -38,7 +38,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/moverseai/moai/${{ env.NAME }}
           tags: | # https://github.com/docker/metadata-action#tags-input
-            type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ env.VERSION }}-pt112-cu113
+            type=raw,enable=true,priority=200,prefix=,suffix=,value=${{ env.VERSION }}-pt220-cu118
       # This step uses the `docker/build-push-action` action to build the image, based on your repository's `Dockerfile`. If the build succeeds, it pushes the image to GitHub Packages.
       # It uses the `context` parameter to define the build's context as the set of files located in the specified path. For more information, see "[Usage](https://github.com/docker/build-push-action#usage)" in the README of the `docker/build-push-action` repository.
       # It uses the `tags` and `labels` parameters to tag and label the image with the output from the "meta" step.
