--- a/moai/conf/model/components/human/body/initialize_translation.yaml
+++ b/moai/conf/model/components/human/body/initialize_translation.yaml
@@ -1,4 +1,4 @@
-# @package model.modules.initialize_translation
+# @package model.components.initialize_translation
 
 _target_: moai.monads.human.body.init_translation.InitTranslation
 torso_edge_indices:
