--- a/moai/conf/examples/MNIST/processes_flow.yaml
+++ b/moai/conf/examples/MNIST/processes_flow.yaml
@@ -22,29 +22,33 @@ _moai_:
         _setup_: pretrained
     _lightning_step_: # forces execution of the following flows
       _fit_:
-        _batch_:
+        # _batch_:
+        _stages_:
           train_encoder:
             _optimizer_: train_encoder
             _objective_: train_encoder
             _flows_: [encoder]
       _test_:
-        _batch_:
-          train_encoder:
+        # _batch_:
+        # train_encoder:
+        _datasets_:
+          mnist:
             _flows_: [encoder, postprocess]
       _predict_: # used for torchserve
-        _batch_:
+        # _batch_:
+        _stages_:
           train_encoder:
             _flows_: [encoder, postprocess]
       _val_:
-        _batch_:
-          mnist: &val_proc
-            train_encoder:
-              _flows_: [encoder, postprocess]
+        # _batch_:
+        _datasets_:
+          mnist: &val_proc # train_encoder:
+            _flows_: [encoder, postprocess]
           mnist_2: *val_proc
     _schedule_:
       - _epoch_: 1
         _fit_:
-          _batch_:
+          _stages_: # _batch_:
             train_encoder:
               _optimizer_: train_encoder
               _objective_: train_encoder
