--- a/moai/conf/engine/serve/handlers/output/cleanup.yaml
+++ b/moai/conf/engine/serve/handlers/output/cleanup.yaml
@@ -1,3 +1,4 @@
-# @package handlers.postprocess._name_
-_target_: moai.serve.handlers.CleanUp
-dirs: ???
+# @package handlers.postprocess.cleanup
+_target_: moai.serve.handlers.cleanup.CleanUp
+dirs: null
+json_key: 'workspace_run'
