--- a/moai/conf/model/monads/geometry/projection/mv_weak_perspective_camera.yaml
+++ b/moai/conf/model/monads/geometry/projection/mv_weak_perspective_camera.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.mv_weak_perspective_camera
 
 _target_: moai.monads.geometry.MVWeakPerspective
 # focal_length: 5000.0
