--- a/moai/conf/model/monads/geometry/rotation/conversion.yaml
+++ b/moai/conf/model/monads/geometry/rotation/conversion.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.conversion
 
 _target_: moai.monads.geometry.rotations.ConvertRotation
 src: ??? # from representation
