--- a/moai/conf/model/monads/geometry/projection/project.yaml
+++ b/moai/conf/model/monads/geometry/projection/project.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.project
 
 _target_: moai.monads.geometry.Projection
 xyz_at: channel # one of ['channel', 'row]
