--- a/moai/conf/model/monads/geometry/transformation/transform.yaml
+++ b/moai/conf/model/monads/geometry/transformation/transform.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.transform
 
 _target_: moai.monads.geometry.Transformation
 xyz_in_at: channel  # one of ['channel', 'row]
