--- a/moai/conf/engine/serve/handlers/input/image_raw.yaml
+++ b/moai/conf/engine/serve/handlers/input/image_raw.yaml
@@ -1,3 +1,3 @@
 # @package handlers.preprocess.image_raw
 
-_target_: moai.serve.handlers.ImageRaw
+_target_: moai.serve.handlers.image_raw.ImageRaw
