feat: update config properties
- include custom metrics
- enforce prometheus formatting

--- a/docker/serve/config.properties
+++ b/docker/serve/config.properties
@@ -12,3 +12,5 @@ default_response_timeout=240
 unregister_model_timeout=240
 enable_metrics_api=true
 prefer_direct_buffer=false
+model_metrics_auto_detect=true
+metrics_mode=prometheus
