fix: update input azure blob

--- a/moai/conf/engine/serve/handlers/input/azure/blob.yaml
+++ b/moai/conf/engine/serve/handlers/input/azure/blob.yaml
@@ -1,6 +1,6 @@
 # @package handlers.preprocess.azure.blob
 
-_target_: moai.serve.handlers.azure.AzureBlobInputHandler
+_target_: moai.serve.handlers.azure.blob.AzureBlobInputHandler
 connection_string: StorageAccessToken # ${env:AZURE_STORAGE_CONNECTION_STRING} # retrieve automatically from env
 container_name: StorageContainer # ${env:AZURE_STORAGE_CONTAINER_NAME}
 blob_paths: ???
