--- a/moai/conf/model/monads/geometry/rotation/roma_rotvec_to_unitquat.yaml
+++ b/moai/conf/model/monads/geometry/rotation/roma_rotvec_to_unitquat.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.roma_rotvec_to_unitquat
 
 _target_: moai.monads.geometry.rotations.RomaRotationVector2Quaternion
