fix (examples): cleaned & simplified MNIST example
+ train option (fit + validation)
+ test option (ckpt needed)
- predict
- 2nd dataset

--- a/moai/conf/examples/MNIST/data.yaml
+++ b/moai/conf/examples/MNIST/data.yaml
@@ -1,18 +1,13 @@
 # @package _global_
 
 data:
-  test:
+  train:
     iterator:
       datasets:
         mnist:
           root: ${DATA_ROOT}
-          train: false
+          train: true
           download: true
-          # transform: torchvision.transforms.ToTensor
-        # mnist_2: # Use this for debugging two datasets as test
-        #   root: ${DATA_ROOT}
-        #   train: true
-        #   download: true
   val:
     iterator:
       datasets:
@@ -20,8 +15,10 @@ data:
           root: ${DATA_ROOT}
           train: false
           download: true
-          # transform: torchvision.transforms.ToTensor
-        mnist_2: # Use this for debugging two datasets as test
+  test:
+    iterator:
+      datasets:
+        mnist:
           root: ${DATA_ROOT}
-          train: true
+          train: false
           download: true
