feat: update streaming opt, ground loss & viz

--- a/moai/conf/examples/MNIST/main.yaml
+++ b/moai/conf/examples/MNIST/main.yaml
@@ -17,7 +17,7 @@ defaults:
   - data/val/dataset/torchvision: [mnist, mnist_2]
 
   - data/test/loader: torch
-  # - data/test/iterator: indexed
+  - data/test/iterator: indexed
   - data/test/augmentation: none
   - data/test/dataset/torchvision: mnist
   # - data/test/dataset/torchvision: [mnist, mnist_2]
