--- a/moai/conf/model/monads/geometry/rotation/roma_unitquat_to_rotmat.yaml
+++ b/moai/conf/model/monads/geometry/rotation/roma_unitquat_to_rotmat.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.roma_unitquat_to_rotmat
 
-_target_: moai.monads.geometry.rotations.Quaternion2RotationVector
+_target_: moai.monads.geometry.rotations.Quaternion2RotationMatrix
