fix: config package names for recent hydra versions

--- a/moai/conf/model/monads/generation/matrix/rotation3d.yaml
+++ b/moai/conf/model/monads/generation/matrix/rotation3d.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.rotation3d
 
 _target_: moai.monads.generation.matrix.Rotation3D
 rotations: ???
