--- a/moai/conf/model/monads/generation/matrix/intrinsics.yaml
+++ b/moai/conf/model/monads/generation/matrix/intrinsics.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.intrinsics
 
 _target_: moai.monads.generation.matrix.Intrinsics
 fov: 64.69
