--- a/moai/conf/model/objectives/regression/cosine_distance.yaml
+++ b/moai/conf/model/objectives/regression/cosine_distance.yaml
@@ -1,6 +1,6 @@
 # @package model.objectives.cosine_distance
 
-_target_: moai.supervision.losses.regression.CosineDistance
+_target_: moai.supervision.objectives.regression.cosine_distance.CosineDistance
 normalized: true
 epsilon: 1.0e-4
 dim: 1
